--- a/catalog.html
+++ b/catalog.html
@@ -7,6 +7,6 @@
   <body>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <img src="images/logo.png" width="100" height="50" alt="Девайс.">
   </body>
 </html>
